GlslEditor/src/hu/racz/zalan/glsleditor/antlr/generated/GLSLParser.java
package hu.racz.zalan.glsleditor.antlr.generated;
// Generated from GLSL.g4 by ANTLR 4.7.1

import java.util.*;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.*;
import org.antlr.v4.runtime.tree.*;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GLSLParser extends Parser {

    static {
        RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache
            = new PredictionContextCache();
    public static final int PD_ERROR = 1, PD_PRAGMA = 2, PDA_PRAGMA_DEBUG = 3, PDA_PRAGMA_OPTIMIZE = 4, PDA_PRAGMA_STDGL = 5,
            PDA_PRAGMA_TOGGLE = 6, PD_VERSION = 7, PDA_VERSION_PROFILE = 8, PD_LINE = 9, PD_EXTENSION = 10,
            PDA_EXTENSION_ALL_BEHAVIOUR = 11, PDA_EXTENSION_BEHAVIOUR = 12, PDA_EXTENSION_ALL = 13,
            KW_LAYOUT = 14, KW_BREAK = 15, KW_CONTINUE = 16, KW_DO = 17, KW_FOR = 18, KW_WHILE = 19,
            KW_SWITCH = 20, KW_CASE = 21, KW_DEFAULT = 22, KW_IF = 23, KW_ELSE = 24, KW_DISCARD = 25,
            KW_RETURN = 26, KW_STRUCT = 27, KW_VOID = 28, KW_PRECISION = 29, Q_PRECISE = 30,
            Q_INVARIANT = 31, Q_SUBROUTINE = 32, Q_INTERPOLATION = 33, Q_STORAGE = 34, Q_SHARED = 35,
            Q_PRECISION = 36, RESERVED_KEYWORD = 37, TYPE = 38, BI_FUNCTION = 39, BI_MACRO = 40,
            BI_INTERPOLATION_VARIABLE = 41, BOOL_LITERAL = 42, INT_LITERAL = 43, FLOAT_LITERAL = 44,
            OP_MUL = 45, OP_ADD = 46, OP_SUB = 47, OP_DIV = 48, OP_MOD = 49, OP_INC = 50, OP_DEC = 51,
            OP_SHIFT = 52, OP_RELATIONAL = 53, OP_BIT = 54, OP_BIT_UNARY = 55, OP_LOGICAL = 56,
            OP_LOGICAL_UNARY = 57, OP_MODIFY = 58, OP_ASSIGN = 59, DOT = 60, COMMA = 61, COLON = 62,
            SEMICOLON = 63, QUESTION = 64, VECTOR_FIELD = 65, LRB = 66, RRB = 67, LCB = 68, RCB = 69,
            LSB = 70, RSB = 71, MULTI_LINE_COMMENT = 72, SINGLE_LINE_COMMENT = 73, NEW_LINE = 74,
            SPACE = 75, TAB = 76, IDENTIFIER = 77;
    public static final int RULE_start = 0, RULE_macro = 1, RULE_m_version = 2, RULE_m_line = 3, RULE_m_pragma = 4,
            RULE_m_extension = 5, RULE_m_error = 6, RULE_function_signature = 7, RULE_function_argument_list = 8,
            RULE_function_argument = 9, RULE_function_prototype = 10, RULE_function_definition = 11,
            RULE_function_call = 12, RULE_function_call_argument_list = 13, RULE_statement_list = 14,
            RULE_statement = 15, RULE_compound_statement = 16, RULE_simple_statement = 17,
            RULE_selection_statement = 18, RULE_switch_statement = 19, RULE_case_label = 20,
            RULE_iteration_statement = 21, RULE_for_iteration = 22, RULE_while_iteration = 23,
            RULE_do_while_iteration = 24, RULE_jump_statement = 25, RULE_expression_statement = 26,
            RULE_declaration_statement = 27, RULE_init_declaration_list = 28, RULE_single_declaration = 29,
            RULE_struct_declaration_list = 30, RULE_struct_declaration = 31, RULE_struct_declarator_list = 32,
            RULE_struct_declarator = 33, RULE_struct_specifier = 34, RULE_expression = 35,
            RULE_return_type = 36, RULE_fully_specified_type = 37, RULE_fully_specified_struct = 38,
            RULE_type = 39, RULE_type_qualifier = 40, RULE_storage_qualifier = 41,
            RULE_type_name_list = 42, RULE_layout_qualifier = 43, RULE_layout_qualifier_id_list = 44,
            RULE_layout_qualifier_id = 45, RULE_literal = 46, RULE_array_usage = 47,
            RULE_array_declaration = 48;
    public static final String[] ruleNames = {
        "start", "macro", "m_version", "m_line", "m_pragma", "m_extension", "m_error",
        "function_signature", "function_argument_list", "function_argument", "function_prototype",
        "function_definition", "function_call", "function_call_argument_list",
        "statement_list", "statement", "compound_statement", "simple_statement",
        "selection_statement", "switch_statement", "case_label", "iteration_statement",
        "for_iteration", "while_iteration", "do_while_iteration", "jump_statement",
        "expression_statement", "declaration_statement", "init_declaration_list",
        "single_declaration", "struct_declaration_list", "struct_declaration",
        "struct_declarator_list", "struct_declarator", "struct_specifier", "expression",
        "return_type", "fully_specified_type", "fully_specified_struct", "type",
        "type_qualifier", "storage_qualifier", "type_name_list", "layout_qualifier",
        "layout_qualifier_id_list", "layout_qualifier_id", "literal", "array_usage",
        "array_declaration"
    };

    private static final String[] _LITERAL_NAMES = {
        null, "'#error'", "'#pragma'", "'debug'", "'optimize'", "'STDGL'", null,
        "'#version'", null, "'#line'", "'#extension'", null, null, "'all'", "'layout'",
        "'break'", "'continue'", "'do'", "'for'", "'while'", "'switch'", "'case'",
        "'default'", "'if'", "'else'", "'discard'", "'return'", "'struct'", "'void'",
        "'precision'", "'precise'", "'invariant'", "'subroutine'", null, null,
        "'shared'", null, null, null, null, null, null, null, null, null, "'*'",
        "'+'", "'-'", "'/'", "'%'", "'++'", "'--'", null, null, null, "'~'", null,
        "'!'", null, "'='", "'.'", "','", "':'", "';'", "'?'", null, "'('", "')'",
        "'{'", "'}'", "'['", "']'", null, null, null, "' '", "'\t'"
    };
    private static final String[] _SYMBOLIC_NAMES = {
        null, "PD_ERROR", "PD_PRAGMA", "PDA_PRAGMA_DEBUG", "PDA_PRAGMA_OPTIMIZE",
        "PDA_PRAGMA_STDGL", "PDA_PRAGMA_TOGGLE", "PD_VERSION", "PDA_VERSION_PROFILE",
        "PD_LINE", "PD_EXTENSION", "PDA_EXTENSION_ALL_BEHAVIOUR", "PDA_EXTENSION_BEHAVIOUR",
        "PDA_EXTENSION_ALL", "KW_LAYOUT", "KW_BREAK", "KW_CONTINUE", "KW_DO",
        "KW_FOR", "KW_WHILE", "KW_SWITCH", "KW_CASE", "KW_DEFAULT", "KW_IF", "KW_ELSE",
        "KW_DISCARD", "KW_RETURN", "KW_STRUCT", "KW_VOID", "KW_PRECISION", "Q_PRECISE",
        "Q_INVARIANT", "Q_SUBROUTINE", "Q_INTERPOLATION", "Q_STORAGE", "Q_SHARED",
        "Q_PRECISION", "RESERVED_KEYWORD", "TYPE", "BI_FUNCTION", "BI_MACRO",
        "BI_INTERPOLATION_VARIABLE", "BOOL_LITERAL", "INT_LITERAL", "FLOAT_LITERAL",
        "OP_MUL", "OP_ADD", "OP_SUB", "OP_DIV", "OP_MOD", "OP_INC", "OP_DEC",
        "OP_SHIFT", "OP_RELATIONAL", "OP_BIT", "OP_BIT_UNARY", "OP_LOGICAL", "OP_LOGICAL_UNARY",
        "OP_MODIFY", "OP_ASSIGN", "DOT", "COMMA", "COLON", "SEMICOLON", "QUESTION",
        "VECTOR_FIELD", "LRB", "RRB", "LCB", "RCB", "LSB", "RSB", "MULTI_LINE_COMMENT",
        "SINGLE_LINE_COMMENT", "NEW_LINE", "SPACE", "TAB", "IDENTIFIER"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override
    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "GLSL.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public GLSLParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class StartContext extends ParserRuleContext {

        public List<MacroContext> macro() {
            return getRuleContexts(MacroContext.class);
        }

        public MacroContext macro(int i) {
            return getRuleContext(MacroContext.class, i);
        }

        public List<Function_prototypeContext> function_prototype() {
            return getRuleContexts(Function_prototypeContext.class);
        }

        public Function_prototypeContext function_prototype(int i) {
            return getRuleContext(Function_prototypeContext.class, i);
        }

        public List<Function_definitionContext> function_definition() {
            return getRuleContexts(Function_definitionContext.class);
        }

        public Function_definitionContext function_definition(int i) {
            return getRuleContext(Function_definitionContext.class, i);
        }

        public List<Declaration_statementContext> declaration_statement() {
            return getRuleContexts(Declaration_statementContext.class);
        }

        public Declaration_statementContext declaration_statement(int i) {
            return getRuleContext(Declaration_statementContext.class, i);
        }

        public List<TerminalNode> SEMICOLON() {
            return getTokens(GLSLParser.SEMICOLON);
        }

        public TerminalNode SEMICOLON(int i) {
            return getToken(GLSLParser.SEMICOLON, i);
        }

        public StartContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override public int getRuleIndex() {
            return RULE_start;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof GLSLListener) {
                ((GLSLListener) listener).enterStart(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof GLSLListener) {
                ((GLSLListener) listener).exitStart(this);
            }
        }
    }

    public final StartContext start() throws RecognitionException {
        StartContext _localctx = new StartContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_start);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(105);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PD_ERROR) | (1L << PD_PRAGMA) | (1L << PD_VERSION) | (1L << PD_LINE) | (1L << PD_EXTENSION) | (1L << KW_LAYOUT) | (1L << KW_STRUCT) | (1L << KW_VOID) | (1L << KW_PRECISION) | (1L << Q_PRECISE) | (1L << Q_INVARIANT) | (1L << Q_SUBROUTINE) | (1L << Q_INTERPOLATION) | (1L << Q_STORAGE) | (1L << Q_SHARED) | (1L << Q_PRECISION) | (1L << TYPE) | (1L << SEMICOLON))) != 0) || _la == IDENTIFIER) {
                    {
                        setState(103);
                        _errHandler.sync(this);
                        switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
                            case 1: {
                                setState(98);
                                macro();
                            }
                            break;
                            case 2: {
                                setState(99);
                                function_prototype();
                            }
                            break;
                            case 3: {
                                setState(100);
                                function_definition();
                            }
                            break;
                            case 4: {
                                setState(101);
                                declaration_statement();
                            }
                            break;
                            case 5: {
                                setState(102);
                                match(SEMICOLON);
                            }
                            break;
                        }
                    }
                    setState(107);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class MacroContext extends ParserRuleContext {

        public TerminalNode NEW_LINE() {
            return getToken(GLSLParser.NEW_LINE, 0);
        }

        public TerminalNode EOF() {
            return getToken(GLSLParser.EOF, 0);
        }

        public M_versionContext m_version() {
            return getRuleContext(M_versionContext.class, 0);
        }

        public M_lineContext m_line() {
            return getRuleContext(M_lineContext.class, 0);
        }

        public M_pragmaContext m_pragma() {
            return getRuleContext(M_pragmaContext.class, 0);
        }

        public M_extensionContext m_extension() {
            return getRuleContext(M_extensionContext.class, 0);
        }

        public M_errorContext m_error() {
            return getRuleContext(M_errorContext.class, 0);
        }

        public MacroContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override public int getRuleIndex() {
            return RULE_macro;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof GLSLListener) {
                ((GLSLListener) listener).enterMacro(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof GLSLListener) {
                ((GLSLListener) listener).exitMacro(this);
            }
        }
    }

    public final MacroContext macro() throws RecognitionException {
        MacroContext _localctx = new MacroContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_macro);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(113);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                    case PD_VERSION: {
                        setState(108);
                        m_version();
                    }
                    break;
                    case PD_LINE: {
                        setState(109);
                        m_line();
                    }
                    break;
                    case PD_PRAGMA: {
                        setState(110);
                        m_pragma();
                    }
                    break;
                    case PD_EXTENSION: {
                        setState(111);
                        m_extension();
                    }
                    break;
                    case PD_ERROR: {
                        setState(112);
                        m_error();
                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
                setState(115);
                _la = _input.LA(1);
                if (!(_la == EOF || _la == NEW_LINE)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) {
                        matchedEOF = true;
                    }
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class M_versionContext extends ParserRuleContext {

        public TerminalNode PD_VERSION() {
            return getToken(GLSLParser.PD_VERSION, 0);
        }

        public TerminalNode INT_LITERAL() {
            return getToken(GLSLParser.INT_LITERAL, 0);
        }

        public TerminalNode PDA_VERSION_PROFILE() {
            return getToken(GLSLParser.PDA_VERSION_PROFILE, 0);
        }

        public M_versionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override public int getRuleIndex() {
            return RULE_m_version;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof GLSLListener) {
                ((GLSLListener) listener).enterM_version(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof GLSLListener) {
                ((GLSLListener) listener).exitM_version(this);
            }
        }
    }

    public final M_versionContext m_version() throws RecognitionException {
        M_versionContext _localctx = new M_versionContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_m_version);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(117);
                match(PD_VERSION);
                setState(118);
                match(INT_LITERAL);
                setState(120);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == PDA_VERSION_PROFILE) {
                    {
                        setState(119);
                        match(PDA_VERSION_PROFILE);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class M_lineContext extends ParserRuleContext {

        public TerminalNode PD_LINE() {
            return getToken(GLSLParser.PD_LINE, 0);
        }

        public List<TerminalNode> INT_LITERAL() {
            return getTokens(GLSLParser.INT_LITERAL);
        }

        public TerminalNode INT_LITERAL(int i) {
            return getToken(GLSLParser.INT_LITERAL, i);
        }

        public M_lineContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override public int getRuleIndex() {
            return RULE_m_line;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof GLSLListener) {
                ((GLSLListener) listener).enterM_line(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof GLSLListener) {
                ((GLSLListener) listener).exitM_line(this);
            }
        }
    }

    public final M_lineContext m_line() throws RecognitionException {
        M_lineContext _localctx = new M_lineContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_m_line);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(122);
                match(PD_LINE);
                setState(123);
